--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,7 +75,7 @@ before-build = [
 # Mojo runtime libs use GLIBCXX symbols newer than the manylinux_2_34
 # baseline, so auditwheel repair refuses. Since hatch-mojo already bundles
 # libs and patches RPATH, we just retag the wheel (same as official mojo pkg).
-repair-wheel-command = "python -m wheel tags --platform-tag manylinux_2_34_$(uname -m) {wheel} && cp $(dirname {wheel})/*.whl {dest_dir}/"
+repair-wheel-command = "python -m wheel tags --platform-tag manylinux_2_34_$(uname -m) {wheel} && cp $(dirname {wheel})/*manylinux*.whl {dest_dir}/"
 
 [tool.cibuildwheel.macos]
 repair-wheel-command = ""
